@@ -1,6 +1,13 @@
 2011-01-23 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/z80.h,
+	  src/z80/main.c,
+	  src/z80/ralloc.c:
+	  Added option to handle hl, but not a (or iy) by new allocator.
+
+2011-01-23 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/z80.h,
 	  src/SDCCtree_dec.hpp,
 	  src/z80/ralloc.c,
 	  src/z80/ralloc2.cc:
